--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 
 #searchbar {
     margin: 150px 0;
-    width:100%;
+    width: 100%;
 }
 
 .navbar-brand {
@@ -61,11 +61,23 @@ body {
 .btn-default {
     color: #555;
     background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
     height: 46px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+}
+
+#submitButton {
+    background-color: darkgreen;
+    border: 1px solid #ccc;
+}
+
+.decision {
+    background-color: darkgreen;
+    border:none;
+}
+
+.decision:hover, .decision:hover i  {
+    background-color: #68c62a;
 }
 
 .btn span {
@@ -73,16 +85,18 @@ body {
     color: darkgray;
 }
 
-
-/*Added CSS*/
-
 #city-input {
-    min-width:180px;
+    width: 50%;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
+
 #search-input {
-    min-width: 180px;
+    width: 50%;
+}
+
+.glyphicon {
+    background-color: darkgreen;
 }
 
 #restaurantDiv {
@@ -90,16 +104,16 @@ body {
     border-radius: 6px;
     text-align: center;
     vertical-align: middle;
-    padding-bottom:5px;
+    padding-bottom: 5px;
 }
 
 #resultName {
     background-color: #68c62a;
-    color:#fff;
+    color: #fff;
     border-bottom: 1px solid #ccc;
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
-    padding:5px 0;
+    padding: 5px 0;
 }
 
 .navbar-right {
